--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -43,27 +43,28 @@ input[type=number] {
 
 .myHeader {
     background-color: #4267b2;
+    position: relative;
+    padding: .5rem 1rem 0 1rem;
+}
+
+.navbar-brand {
+    position: absolute;
+    top: 5%;
+    height: 90%;
+    margin: 0;
+    padding: 0;
 }
 
 .logo-img {
-    max-height: 70px;
+    height: 100%;
 }
 
 .fa-phone {
     transform: rotate(90deg);
 }
 
-.navbar-toggler {
-    border: 1px solid #FFF;
-    margin-right: 30px;
-}
-
 .navbar-toggler i {
     font-size: 30px;
-}
-
-.nav-item:last-child {
-    margin: 0 20px;
 }
 
 .dropdown-menu {
@@ -73,7 +74,9 @@ input[type=number] {
     border: none;
     color: #ffffff;
     background-color: #4267b2;
-    margin-top: 28px;
+    margin-top: 0;
+    padding: 0;
+    border-radius: 0;
 }
 
 .dropdown-menu.show {
@@ -83,12 +86,13 @@ input[type=number] {
 
 .dropdown-item:hover {
     color: #ffffff;
-    font-weight: 500;
-    background-color: transparent;
+    background: #ffffff4f;
 }
 
 .dropdown-item {
     color: #ffffff;
+    padding: 10px 20px;
+    border-top: 1px solid #ffffff4f;
 }
 
 .dropdown-toggle::after {
@@ -108,36 +112,37 @@ input[type=number] {
 }
 
 .nav-link:hover {
+    background: #ffffff4f;
     color: #FFF;
 }
 
-.nav-link:before {
-    top: 0px;
-    transform: translateY(10px);
-}
+/*.nav-link:before {*/
+/*    top: 0px;*/
+/*    transform: translateY(10px);*/
+/*}*/
 
-.nav-link:after {
-    bottom: 0px;
-    transform: translateY(-10px);
-}
+/*.nav-link:after {*/
+/*    bottom: 0px;*/
+/*    transform: translateY(-10px);*/
+/*}*/
 
-.nav-link:before,
-.nav-link:after {
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 1px;
-    background: #FFF;
-    content: "";
-    opacity: 0;
-    transition: all 0.3s;
-}
+/*.nav-link:before,*/
+/*.nav-link:after {*/
+/*    position: absolute;*/
+/*    left: 0px;*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    background: #FFF;*/
+/*    content: "";*/
+/*    opacity: 0;*/
+/*    transition: all 0.3s;*/
+/*}*/
 
-.nav-link:not(.active):hover:before,
-.nav-link:not(.active):hover:after {
-    opacity: 1;
-    transform: translateY(0px);
-}
+/*.nav-link:not(.active):hover:before,*/
+/*.nav-link:not(.active):hover:after {*/
+/*    opacity: 1;*/
+/*    transform: translateY(0px);*/
+/*}*/
 
 .nav-link i {
     margin-left: 10px;
@@ -161,13 +166,8 @@ input[type=number] {
     height: 100%;
 }
 
-.navbar-collapse {
-    padding: 10px 20px;
-    padding-right: 0;
-}
-
 .contact-number a {
-    color: #FFF;
+    color: #ffffffb8;
     margin: 0 10px;
     font-weight: 700;
 }
@@ -178,7 +178,7 @@ input[type=number] {
 }
 
 .header-hotline {
-    border-bottom: 1px solid #FFF;
+    border-bottom: 1px solid #ffffffb8;
 }
 
 .btn-login {
@@ -211,10 +211,10 @@ input[type=number] {
 
 .mega-menu {
     background-color: #4267b2;
-    margin-top: 28px;
+    margin-top: 0;
+    border-top: 1px solid #ffffff4f;
     position: absolute;
     padding: 50px;
-    border-radius: .25rem;
     display: block;
     opacity: 0;
     visibility: hidden;
@@ -263,7 +263,7 @@ ul.stander li a {
 
 ul.stander li a:hover, ul.stander li.active {
     color: #fefefe;
-    font-weight: 500;
+    /*font-weight: 500;*/
     cursor: pointer;
     background: #7a96ca;
 }
