--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -334,7 +334,7 @@ body.loading .modal-loading {
 }
 
 .footer-info i {
-    font-size: 30px;
+    font-size: 20px;
     margin-right: 20px;
 }
 
@@ -476,11 +476,11 @@ body.loading .modal-loading {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0;
 }
 
 .search {
-    margin: 10px 0;
+    margin: 30px 0 20px 0;
     align-items: center;
 }
 
