--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -48,8 +48,8 @@
                     <div class="form-group text-left mb-1">
                         <label>Thứ tự:</label>
                         <select class="combobox form-control w-75" id="sortBy">
-                            <option value="0" selected="selected">Giảm dần</option>
-                            <option value="1">Tăng dần</option>
+                            <option value="0">Giảm dần</option>
+                            <option value="1" selected="selected">Tăng dần</option>
                         </select>
                     </div>
                 </div>
