Update violationListOfClass page

--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -66,7 +66,7 @@
             <div class="modal-body"></div>
             <div class="modal-footer">
                 <input type="button" class="btn btn-danger" data-toggle="modal"
-                       id="editModalBtn" data-dismiss="modal" value="TẠO YÊU CẦU THAY ĐỔI">
+                       id="editModalBtn" data-dismiss="modal" value="">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="HỦY">
             </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <a href="violationListOfClass" class="btn btn-primary">ĐÓNG</a>
+                <input type="button" class="btn btn-primary closeModal" value="ĐÓNG"/>
             </div>
         </div>
     </div>
